changed gulp build and fixed mistakes on mobile resolution

--- a/src/scss/base/_burger.scss
+++ b/src/scss/base/_burger.scss
@@ -65,6 +65,7 @@ header.headerDef {
   #menuContent {
     position: absolute;
     left: -100%;
+    top: 0;
     transition: left 0.3s;
   }
 }
