--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -245,6 +245,9 @@
 								display: flex;
 								gap: 24px;
 							}
+							&.searchButton, &.userProfile {
+								display: none;
+							}
 						}
 					}
 				}
