--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -568,7 +568,7 @@
           }
         }
       }
-      @media screen and (max-width: 719px) {
+      @media screen and (max-width: 719px) and (max-width: 425px) {
         height: 734px;
         .fourthContent {
           background-image: none;
@@ -583,6 +583,14 @@
             display: initial;
             max-width: 375px;
             max-height: 367px;
+          }
+        }
+      }
+      @media screen and (max-width: 424px) {
+        .footerContent {
+          .mobilePlaceholder {
+            width: 100%;
+            height: 100%;
           }
         }
       }
